updating the front layout

--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Adventure in driving</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/javascript/game.js"></script>
-</head>
-<body>
+<html lang="en-us">
 
-    
+<head>
+    <meta charset="UTF-8">
+    <title>ADVENTURE IN DRIVING</title>
+
+    <!-- jQuery -->
+    <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
+    <!-- Bootstrap CDN-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+</head>
+
+<body>
+    <!-- Jumbotron Title -->
+    <div class="jumbotron">
+        <h1 class="text-center">ADVENTURE IN DRIVING</h1>
+        <h3 class="text-center">"FEEL THE CLIMAX RIDE."</h3>
+    </div>
+
+    <div class="content">
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
-Tony was here
