--- a/index2.html
+++ b/index2.html
@@ -7,34 +7,47 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/images">
   <style type="text/css">
+
 .container {
 background-color: #e7e7e7; 
 	height: 650px;
 	overflow: auto;
 }
+
+
 .col-sm-10 {
 	height: 650px;
 	overflow: auto;
 }
+
 .col-sm-2 {
 	text-align: center;
 	line-height: 100px;
 	padding: 20px;
 	
+
 }
 .hr {
 	line-height: 10px;
 }
+
+
+
 .left-control-panel {
+
 }
 .main-content-pannel {
 	
 }
+
 .btn {
 	width: 125px;
 	padding: 10px;
+
 }
+
   </style>
 
 
