Changed Background Image

--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,12 @@
   <link rel="stylesheet" type="text/css" href="assets/images">
   <style type="text/css">
 
+body {
+  background-image: url("assets/images/uberCar.jpg");
+}
 .container {
-background-color: #e7e7e7; 
+background-color: #e7e7e7;
+
 	height: 650px;
 	overflow: auto;
 }
@@ -117,8 +121,9 @@ background-color: #e7e7e7;
 	
 		    
     	<div class="main-content-pannel">
-				<div class="col-sm-10" style="background-color:pink;"><br>
+				<div class="col-sm-10" style="background-color:white;"><br>
 			<!--  Insert google maps content-->
+
     		
     			</div>
   			</div>
