--- a/index.html
+++ b/index.html
@@ -11,112 +11,80 @@
         crossorigin="anonymous"></script>
     <script src="Project-one\assets\javascript\game.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
 </head>
 
 <body>
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <script src="assets/javascript/game.js"></script>
+    </head>
 
-    <div class="container">
+    <body>
+        <div class="container">
+            <!-- instructions-->
+            <h1>Welcome to the world of Uber Driving!</h1>
+            <h3 class="instructions"> Instructions</h3>
+            <p class="instructionText"> Choose your vehicle from one of the options below</p>
+            <!--Vehicle icons go below-->
+            <div class="car icons">
+                <a href=""><img src="assets/images/car4.jpg" style="width:100px;height:100px;"/>
+                </a>
+                <a href="http://facebook.com"><img src="assets/images/car8.jpg" style="width:100px;height:100px;"/>
+                </a>
+                <a href="http://LandingPageURL.com"><img src="assets/images/car10.jpg" style="width:100px;height:100px;"/>
+                </a>
+                <a href="http://LandingPageURL.com"><img src="assets/images/ubercar.jpg" style="width:100px;height:100px;"/>
+                </a>
+            </div>
 
-        <br>
+            <!-- UserName-->
+            <p class="instructionText"> Enter your username to keep track of your progress and see how you fare against your fellow drivers</p>
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input placeholder="Username" id="user_name" type="text">
+                            <label for="user_name"></label>
+                            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
+                        <!--Music-->
+                        <p class="instructionText">You have the option to choose your tunes while you cruise the streets of Chicago</p>
 
-        <!-- Jumbotron -->
-        <div class="jumbotron">
-            <h1 class="text-center">WELCOME ON BOARD!</h1>
-            <h3>Ride That make you feel good!</h3>
-        </div>
-
-        <div class="col-lg-6">
-
-            <!-- Controls (Superpower Grow/Shrink)-->
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Select your Favorites Car Here!</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="text-center">
-
-                        <button class="btn btn-default btn-lg normal-button">
-                            <span class="glyphicon"></span> Car-one</button>
-                        <button class="btn btn-danger btn-lg shrink-button">
-                            <span class="glyphicon"></span> Car-two</button>
-                        <button class="btn btn-danger btn-lg shrink-button">
-                            <span class="glyphicon"></span> Car-three</button>
-                        <button class="btn btn-danger btn-lg shrink-button">
-                            <span class="glyphicon"></span> Car-four</button>
+                        <!--User How to-->
+                        <br>
+                        <div class="panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Move Controls</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="text-center">
+                                    <button class="btn btn-default btn-lg up-button">
+                                        <span class="glyphicon glyphicon-arrow-up"></span>
+                                    </button>
+                                </div>
+                                <div class="text-center">
+                                    <button class="btn btn-default btn-lg left-button">
+                                        <span class="glyphicon glyphicon-arrow-left"></span>
+                                    </button>
+                                    <button class="btn btn-default btn-lg down-button">
+                                        <span class="glyphicon glyphicon-arrow-down"></span>
+                                    </button>
+                                    <button class="btn btn-default btn-lg right-button">
+                                        <span class="glyphicon glyphicon-arrow-right"></span>
+                                    </button>
+                                </div>
+                                <br>
+                                <div class="text-center">
+                                    <button class="btn btn-default btn-lg back-button">
+                                        <span class="glyphicon"></span> Start Now!</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg-6">
-
-        <!-- Controls (Superpower Grow/Shrink)-->
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">All Points Are Matter!!</h3>
-            </div>
-            <div class="panel-body">
-                <div class="text-center">
-                    <button class="btn btn-default btn-lg normal-button">
-                        <span class="glyphicon"></span> Points</button>
-                    <button class="btn btn-primary btn-lg grow-button">
-                        <span class="glyphicon"></span> Timers</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <!-- Controls (Uber Controls keys) -->
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Move Controls</h3>
-        </div>
-        <div class="panel-body">
-            <div class="text-center">
-                <button class="btn btn-default btn-lg up-button">
-                    <span class="glyphicon glyphicon-arrow-up"></span>
-                </button>
-            </div>
-            <div class="text-center">
-                <button class="btn btn-default btn-lg left-button">
-                    <span class="glyphicon glyphicon-arrow-left"></span>
-                </button>
-                <button class="btn btn-default btn-lg down-button">
-                    <span class="glyphicon glyphicon-arrow-down"></span>
-                </button>
-                <button class="btn btn-default btn-lg right-button">
-                    <span class="glyphicon glyphicon-arrow-right"></span>
-                </button>
-            </div>
-            <br>
-            <div class="text-center">
-                <button class="btn btn-default btn-lg back-button">
-                    <span class="glyphicon"></span> Start Now!</button>
-            </div>
-        </div>
-    </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
+    </body>
 
 </html>
