--- a/index2.html
+++ b/index2.html
@@ -102,7 +102,7 @@ body {
 
     				<h2>Dashboard </h2>
     				<hr size="2px">
-    				  <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> Remaining<br><span style="font-size:20px">3:45</span></button>
+    				  <button type="button" class="btn btn-default timer-container" id="#run-the-timer"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> Remaining<br><span style="font-size:20px"><span class="minute">03</span>:<span class="second">45</span></span></button>
     				<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-road" aria-hidden="true"></span> Routes<br><span style="font-size:20px">Chicago</span></button>    			
     				<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Winnings<br><span style="font-size:20px">$98:21</span></button><br>
 
