--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
- <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+ <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
  <script type="text/javascript" src="assets/javascript/game.js"></script>
 
