--- a/projecttemp.html
+++ b/projecttemp.html
@@ -267,10 +267,10 @@ var distanceTraveled = getDistanceFromLatLonInMi(randomLat, randomLong, randomLa
 
     // });
   //expenses
-  var total= [uberPoolfee, uberXfee, uberXlfee, uberSelectfee];
-  var expenses= total[i] *.10;
-  var commission= total[i]*.25;
-  var takeHome=total[i]-expenses[i]-commission[i];
+  // var total= [uberPoolfee, uberXfee, uberXlfee, uberSelectfee];
+  // var expenses= total[i] *.10;
+  // var commission= total[i]*.25;
+  // var takeHome=total[i]-expenses[i]-commission[i];
 
 
 
