--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div class="icons">
                     <img src="assets/images/taxi.png" width="90px">
                     <img src="assets/images/uberX.png" width="90px">
-                    <img src="assets/images/lux.png" width="90px">
+                    <img src="assets/images/Lux.png" width="90px">
                     <img src="assets/images/SUV.png" width="90px">
                   </div>
                   <br>
