--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                         <br>UberX
                       </label>
 
-                      <label class="btn btn-default " data-image="assets/images/lux.png">
-                        <img src="assets/images/lux.png" width="90px">
+                      <label class="btn btn-default " data-image="assets/images/Lux.png">
+                        <img src="assets/images/Lux.png" width="90px">
                         <input type="radio" class='car' name="options3" id="uberSelect" value="uberSelect" autocomplete="off">
                         <span class="glyphicon glyphicon-ok t"></span>
                         <br>Select
