--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <img src="assets/images/taxi.png" width="90px">
                     <img src="assets/images/uberX.png" width="90px">
                     <img src="assets/images/Lux.png" width="90px">
-                    <img src="assets/images/SUV.png" width="90px">
+                    <img src="assets/images/suv.png" width="90px">
                   </div>
                   <br>
                   <p class="instructionText"> Enter your username for personalized experience</p>
@@ -284,8 +284,8 @@
                         <br>Select
                       </label>
 
-                      <label class="btn btn-default " data-image="assets/images/SUV.png">
-                        <img src="assets/images/SUV.png" width="90px">
+                      <label class="btn btn-default " data-image="assets/images/suv.png">
+                        <img src="assets/images/suv.png" width="90px">
                         <input type="radio" class='car' name="options4" id="uberXl" value="uberXl" autocomplete="off">
                         <span class="glyphicon glyphicon-ok t"></span>
                         <br>UberXL
