correcting image name

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <!-- Insert left control pannel-->
 
             <div>
-              <img src="assets/images/uber_logo.png" class="logo">
+              <img src="assets/images/Uber_logo.png" class="logo">
             </div>
             <button type="button" class="btn btn-default timer-container" id="#run-the-timer">
               <span class="glyphicon glyphicon-time" aria-hidden="true"></span> Remaining
