--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <style type="text/css">
     body {
-      background-image: url("assets/images/uberCar.jpg");
+      background-image: url("assets/images/ubercar.jpg");
     }
 
     .control-panel {
